--- a/package.json
+++ b/package.json
@@ -32,11 +32,16 @@
 		"vite": "^7.0.4",
 		"vitest": "^3.2.3",
 		"vitest-browser-svelte": "^0.1.0",
+		"postcss": "^8.5.0",
+		"tailwindcss": "^4.1.0",
+		"autoprefixer": "^10.4.0"
+	},
+	"dependencies": {
 		"@duckdb/duckdb-wasm": "^1.29.0",
 		"@oneidentity/zstd-js": "^1.0.0",
-		"flowbite-svelte": "^1.10.0",
+		"@tailwindcss/postcss": "^4.1.11",
+		"flowbite-svelte": "^1.10.20",
 		"flowbite": "^3.1.0",
-		"flowbite-svelte-icons": "^2.2.0",
-		"tailwindcss": "^4.1.0"
+		"flowbite-svelte-icons": "^2.2.0"
 	}
 }
